fix nav margins on small breakpoints

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -167,17 +167,17 @@ section.splash
 		align-items: center
 		display: flex
 		justify-content: space-between
-		margin: $margin
 		max-width: 1400px
+		padding: $margin
 		text-align: center
 		z-index: 1
 
 		+bu('medium')
-			position: absolute
-			top: 50px
 			left: $margin
-			right: $margin
 			margin: auto
+			padding: $margin 0px
+			position: absolute
+			right: $margin
 
 		+bp('small')
 			justify-content: center
